// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentDOMModeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 400px; overflow: hidden; text-align: center; background: rgb(250, 250, 250); border: 1px solid #ebedf0; border-radius: 2px;"
  >
    <div
      style="height: 100%; padding: 48px;"
    >
      渲染在当前元素中。
      <div
        style="margin-top: 16px;"
      >
        <div
          class="t-radio-group t-radio-group-outline t-radio-group-small"
        >
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="left"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              left
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="right"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              right
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="top"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              top
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="bottom"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              bottom
            </span>
          </label>
        </div>
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          style="margin-left: 16px;"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentDOMUsageExample.jsx 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 400px; overflow: hidden; text-align: center; background: rgb(250, 250, 250); border: 1px solid #ebedf0; border-radius: 2px;"
  >
    <div
      style="height: 100%; padding: 48px;"
    >
      渲染在当前元素中。
      <div
        style="margin-top: 16px;"
      >
        <div
          class="t-radio-group t-radio-group-outline t-radio-group-small"
        >
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="left"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              left
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="right"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              right
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="top"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              top
            </span>
          </label>
          <label
            class="t-radio-button"
          >
            <input
              class="t-radio-button__former"
              name="bottom"
              readonly=""
              type="radio"
              value=""
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              bottom
            </span>
          </label>
        </div>
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          style="margin-left: 16px;"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DestroyOnCloseUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`FooterUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`ModeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="left"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="right"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="top"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="bottom"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px;"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`NoMaskUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`PlacementUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="left"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="right"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="top"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="bottom"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px;"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`SizeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="left"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="right"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="top"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name="bottom"
          readonly=""
          type="radio"
          value=""
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <div
        class="t-radio-group t-radio-group-outline t-radio-group-small"
      >
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="small"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            small(300px)
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="middle"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            middle(500px)
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="large"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            large(760px)
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="200px"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            200
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="400px"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            400px
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            name="50%"
            readonly=""
            type="radio"
            value=""
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            50%
          </span>
        </label>
      </div>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        Open
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;
